--- a/Valley View Farm/HTML/index.html
+++ b/Valley View Farm/HTML/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valley View Farm</title>
-    <link rel="stylesheet" href="C:\Sheppered\Workspace\Web projects\Valley View Farm\CSS\index.css">
+    <link rel="stylesheet" href="Valley View Farm\CSS\index.css">
 </head>
 
 <body>
@@ -36,7 +36,7 @@
             <p>Your destination for high-quality agricultural products.</p>
 
             <!-- Image added below the text -->
-            <img src="C:\Sheppered\Workspace\Web projects\Valley View Farm\icons\im.jpg" alt="Farm Image" class="farm-image">
+            <img src="Valley View Farm\icons\im.jpg" alt="Farm Image" class="farm-image">
         </div>
     </section>
 
@@ -51,7 +51,7 @@
         </div>
     </footer>
 
-    <script src="C:\Sheppered\Workspace\Web projects\Valley View Farm\JavaScript\index.js"></script>
+    <script src="Valley View Farm\JavaScript\index.js"></script>
 </body>
 
 </html>
