--- a/Valley View Farm/HTML/products.html
+++ b/Valley View Farm/HTML/products.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Products - Valley View Farm</title>
-    <link rel="stylesheet" href="C:\Sheppered\Workspace\Web projects\Valley View Farm\CSS\products.css">
+    <link rel="stylesheet" href="Valley View Farm\CSS\products.css">
 </head>
 
 <body>
@@ -19,55 +19,55 @@
                 <!-- Product 1 -->
                 <div class="product-item">
                     <p>Fresh Harvest Beets</p>
-                    <img src="C:\Sheppered\Workspace\Web projects\Valley View Farm\products\image1.jpg" alt="Freshly harvested beets">
+                    <img src="Valley View Farm\products\image1.jpg" alt="Freshly harvested beets">
                 </div>
 
                 <!-- Product 2 -->
                 <div class="product-item">
                     <p>Organic Beets</p>
-                    <img src="C:\Sheppered\Workspace\Web projects\Valley View Farm\products\image2.jpg" alt="Organic farm-fresh beets">
+                    <img src="Valley View Farm\products\image2.jpg" alt="Organic farm-fresh beets">
                 </div>
 
                 <!-- Product 3 -->
                 <div class="product-item">
                     <p>Organic Farmed Cabbage</p>
-                    <img src="C:\Sheppered\Workspace\Web projects\Valley View Farm\products\image3.jpg" alt="Fresh organic cabbage">
+                    <img src="Valley View Farm\products\image3.jpg" alt="Fresh organic cabbage">
                 </div>
 
                 <!-- Product 4 -->
                 <div class="product-item">
                     <p>Organic Crops</p>
-                    <img src="C:\Sheppered\Workspace\Web projects\Valley View Farm\products\image4.jpg" alt="Well-irrigated organic crops">
+                    <img src="Valley View Farm\products\image4.jpg" alt="Well-irrigated organic crops">
                 </div>
 
                 <!-- Product 5 -->
                 <div class="product-item">
                     <p>Corn and Other Selected Crops</p>
-                    <img src="C:\Sheppered\Workspace\Web projects\Valley View Farm\products\image5.jpg" alt="Corn and a variety of crops">
+                    <img src="Valley View Farm\products\image5.jpg" alt="Corn and a variety of crops">
                 </div>
 
                 <!-- Product 6 -->
                 <div class="product-item">
                     <p>Fresh Crops</p>
-                    <img src="C:\Sheppered\Workspace\Web projects\Valley View Farm\products\image6.jpg" alt="Freshly grown crops">
+                    <img src="Valley View Farm\products\image6.jpg" alt="Freshly grown crops">
                 </div>
 
                 <!-- Product 7 -->
                 <div class="product-item">
                     <p>Fresh farm produce</p>
-                    <img src="C:\Sheppered\Workspace\Web projects\Valley View Farm\products\image7.jpg" alt="Pure and organic Crops">
+                    <img src="Valley View Farm\products\image7.jpg" alt="Pure and organic Crops">
                 </div>
 
                 <!-- Product 8 -->
                 <div class="product-item">
                     <p>Crops</p>
-                    <img src="C:\Sheppered\Workspace\Web projects\Valley View Farm\products\image8.jpg" alt="Freshly farmed Crops">
+                    <img src="Valley View Farm\products\image8.jpg" alt="Freshly farmed Crops">
                 </div>
 
                 <!-- Product 9 -->
                 <div class="product-item">
                     <p>Harvested Crops</p>
-                    <img src="C:\Sheppered\Workspace\Web projects\Valley View Farm\products\image9.jpg" alt="Freshly harvested crops ready for distribution">
+                    <img src="Valley View Farm\products\image9.jpg" alt="Freshly harvested crops ready for distribution">
                 </div>
             </div>
         </div>
