--- a/Valley View Farm/HTML/about.html
+++ b/Valley View Farm/HTML/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Valley View Farm</title>
-    <link rel="stylesheet" href="C:\Sheppered\Workspace\Web projects\Valley View Farm\CSS\about.css">
+    <link rel="stylesheet" href="Valley View Farm\CSS\about.css">
 </head>
 
 <body>
