--- a/Valley View Farm/HTML/contacts.html
+++ b/Valley View Farm/HTML/contacts.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - Valley View Farm</title>
-    <link rel="stylesheet" href="C:\Sheppered\Workspace\Web projects\Valley View Farm\CSS\contacts.css">
+    <link rel="stylesheet" href="Valley View Farm\CSS\contacts.css">
 </head>
 
 <body>
@@ -20,11 +20,11 @@
             
             <!-- Contact Details with Images as Icons (No Text) -->
             <ul class="contact-list">
-                <li><a href="tel:+27832546387"><img src="C:\Sheppered\Workspace\Web projects\Valley View Farm\icons\phone icon.jpeg" alt="Phone Icon"></a></li>
-                <li><a href="mailto:contact@valleyviewfarm.com"><img src="C:\Sheppered\Workspace\Web projects\Valley View Farm\icons\email icon.png" alt="Email Icon"></a></li>
-                <li><a href="https://facebook.com/ValleyViewFarm" target="_blank"><img src="C:\Sheppered\Workspace\Web projects\Valley View Farm\icons\facebook icon.png" alt="Facebook Icon"></a></li>
-                <li><a href="https://wa.me/+27832546387" target="_blank"><img src="C:\Sheppered\Workspace\Web projects\Valley View Farm\icons\whatsapp icon.png" alt="WhatsApp Icon"></a></li>
-                <li><a href="https://instagram.com/valleyviewfarm" target="_blank"><img src="C:\Sheppered\Workspace\Web projects\Valley View Farm\icons\instagram icon.png" alt="Instagram Icon"></a></li>
+                <li><a href="tel:+27832546387"><img src="Valley View Farm\icons\phone icon.jpeg" alt="Phone Icon"></a></li>
+                <li><a href="mailto:contact@valleyviewfarm.com"><img src="Valley View Farm\icons\email icon.png" alt="Email Icon"></a></li>
+                <li><a href="https://facebook.com/ValleyViewFarm" target="_blank"><img src="Valley View Farm\icons\facebook icon.png" alt="Facebook Icon"></a></li>
+                <li><a href="https://wa.me/+27832546387" target="_blank"><img src="Valley View Farm\icons\whatsapp icon.png" alt="WhatsApp Icon"></a></li>
+                <li><a href="https://instagram.com/valleyviewfarm" target="_blank"><img src="Valley View Farm\icons\instagram icon.png" alt="Instagram Icon"></a></li>
             </ul>
 
             <h3>Our Location</h3>
@@ -32,7 +32,7 @@
 
             <!-- Google Maps Icon with Msholozi Butchery pinned -->
 			<a href="https://www.google.com/maps/search/msholozi+butchery/@-25.3334641,30.9312121,12z/data=!3m1!4b1?entry=ttu&g_ep=EgoyMDI0MTIwOS4wIKXMDSoASAFQAw%3D%3D" target="_blank">
-				<img src="C:\Sheppered\Workspace\Web projects\Valley View Farm\icons\google maps icon.png" alt="Google Maps Icon" style="width: 90px; height: 90px;">
+				<img src="Valley View Farm\icons\google maps icon.png" alt="Google Maps Icon" style="width: 90px; height: 90px;">
 			</a>
 
         </div>
